# review_crawler

./: .gitignore  README.md  pyproject.toml
review/: review.py
tests/: test_review.py
