[tool.poetry]
name = "review"
version = "0.1.0"
description = ""
authors = ["문정훈 <black2st11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.5"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
